--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
       border-radius: 5px;
       border: none;
     }
-
-    /* --- контейнер для двух таблиц --- */
     #tables-wrapper {
       display: flex;
       justify-content: space-between;
@@ -55,10 +53,8 @@
     }
     #status-container {
       flex: 1;
-      min-width: 250px;
+      min-width: 300px;
     }
-
-    /* --- общий стиль таблиц --- */
     table {
       width: 100%;
       border-collapse: collapse;
@@ -97,20 +93,20 @@
       font-weight: bold;
     }
 
-    /* --- подсветка статусов --- */
+    /* Подсветка сумм по статусам */
     .status-waiting {
-      background-color: #665c00; /* тёмно-жёлтый фон */
-      color: #ffeb3b;            /* ярко-жёлтый текст */
+      background-color: #ffeb3b; /* жёлтый фон */
+      color: #000;               /* черный текст */
       font-weight: bold;
     }
     .status-scrap-ttl {
-      background-color: #4d0000; /* тёмно-красный фон */
-      color: #ff4444;            /* ярко-красный текст */
+      background-color: #ff4444; /* красный фон */
+      color: #000;
       font-weight: bold;
     }
     .status-scrap-pnla {
-      background-color: #003300; /* тёмно-зелёный фон */
-      color: #00ff66;            /* ярко-зелёный текст */
+      background-color: #00ff66; /* зелёный фон */
+      color: #000;
       font-weight: bold;
     }
   </style>
@@ -131,7 +127,6 @@
     </div>
   </div>
 
-  <!-- контейнер с 2 таблицами -->
   <div id="tables-wrapper">
     <div id="stats-container"></div>
     <div id="status-container"></div>
@@ -142,11 +137,15 @@
     const sheetId = '10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU';
     const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/`;
     const validStatuses = ['OK', 'NDF'];
+    const specialStatuses = ['WAITING', 'SCRAP TTL', 'SCRAP PNLA'];
 
+    // алгоритм 2 — префиксы
     const diagonalMapPrefix = {
       'WH8': 55,'WC8': 32,'WU0': 43,'SQ1': 43,'WM5': 50,
       'WC7': 32,'WP5': 65,'WW1': 75,'WM6': 50
     };
+
+    // алгоритм 1 — цифровые коды
     const diagonalMap = {
       '860': 86,'850': 85,'750': 75,'700': 70,'650': 65,'580': 58,'575': 58,
       '550': 55,'545': 55,'500': 50,'498': 50,'495': 50,'490': 50,
@@ -174,8 +173,7 @@
         const response = await fetch(`${sheetURL}${encodeURIComponent(sheetName)}?key=${apiKey}`);
         const data = await response.json();
         return data.values || [];
-      } catch (err) {
-        console.error('Ошибка получения данных:', err);
+      } catch {
         return [];
       }
     }
@@ -201,7 +199,7 @@
     function calculateDetailedStats(data) {
       const stats = {};
       data.forEach(({ date, serial, status, person }) => {
-        if (!validStatuses.includes(status)) return; 
+        if (!validStatuses.includes(status)) return;
         const diagonals = getDiagonals(serial);
         if (diagonals.length === 0) return;
         if (!stats[person]) stats[person] = {};
@@ -218,83 +216,15 @@
     }
 
     function calculateStatusSummary(data) {
-      const summary = { waiting: 0, "scrap ttl": 0, "scrap pnla": 0 };
-      data.forEach(({ status }) => {
-        const s = status.toLowerCase();
-        if (s.includes("waiting")) summary.waiting++;
-        if (s.includes("scrap ttl")) summary["scrap ttl"]++;
-        if (s.includes("scrap pnla")) summary["scrap pnla"]++;
+      const summary = {};
+      data.forEach(({ status, person }) => {
+        if (!specialStatuses.includes(status)) return;
+        if (!summary[person]) summary[person] = { waiting: 0, "scrap ttl": 0, "scrap pnla": 0 };
+        if (status === "WAITING") summary[person].waiting++;
+        if (status === "SCRAP TTL") summary[person]["scrap ttl"]++;
+        if (status === "SCRAP PNLA") summary[person]["scrap pnla"]++;
       });
       return summary;
-    }
-
-    function renderStatusTable(summary) {
-      const container = document.getElementById('status-container');
-      container.innerHTML = '';
-      const table = document.createElement('table');
-      const thead = document.createElement('thead');
-      const trHead = document.createElement('tr');
-      const th1 = document.createElement('th'); th1.textContent = 'Status';
-      const th2 = document.createElement('th'); th2.textContent = 'Count';
-      trHead.appendChild(th1); trHead.appendChild(th2);
-      thead.appendChild(trHead); table.appendChild(thead);
-
-      const tbody = document.createElement('tbody');
-      Object.entries(summary).forEach(([key, value]) => {
-        const tr = document.createElement('tr');
-        const td1 = document.createElement('td'); td1.textContent = key;
-        const td2 = document.createElement('td'); td2.textContent = value;
-
-        if (key === "waiting") {
-          td1.classList.add("status-waiting");
-          td2.classList.add("status-waiting");
-        }
-        if (key === "scrap ttl") {
-          td1.classList.add("status-scrap-ttl");
-          td2.classList.add("status-scrap-ttl");
-        }
-        if (key === "scrap pnla") {
-          td1.classList.add("status-scrap-pnla");
-          td2.classList.add("status-scrap-pnla");
-        }
-
-        tr.appendChild(td1);
-        tr.appendChild(td2);
-        tbody.appendChild(tr);
-      });
-      table.appendChild(tbody);
-      container.appendChild(table);
-    }
-
-    function fillDateSelect(filterType) {
-      const select = document.getElementById('date-select');
-      select.innerHTML = "";
-      const now = new Date();
-      if (filterType === "day") {
-        for (let i = 0; i < 30; i++) {
-          const d = new Date(now.getFullYear(), now.getMonth(), now.getDate() - i);
-          const val = d.toISOString().split("T")[0];
-          const opt = document.createElement("option");
-          opt.value = val; opt.textContent = val; select.appendChild(opt);
-        }
-      } else if (filterType === "month") {
-        for (let i = 0; i < 12; i++) {
-          const d = new Date(now.getFullYear(), now.getMonth() - i, 1);
-          const y = d.getFullYear();
-          const m = (d.getMonth() + 1).toString().padStart(2, "0");
-          const val = `${y}-${m}`;
-          const opt = document.createElement("option");
-          opt.value = val; opt.textContent = val; select.appendChild(opt);
-        }
-      } else if (filterType === "year") {
-        for (let i = 0; i < 5; i++) {
-          const y = now.getFullYear() - i;
-          const opt = document.createElement("option");
-          opt.value = y.toString(); opt.textContent = y.toString();
-          select.appendChild(opt);
-        }
-      }
-      return select.value;
     }
 
     async function update() {
@@ -302,25 +232,19 @@
       const selectedValue = document.getElementById("date-select").value;
       const allData = await fetchData();
       let filtered = [];
-      if (filterType === "day") {
-        filtered = allData.filter(d => d.date.startsWith(selectedValue));
-      } else if (filterType === "month") {
-        filtered = allData.filter(d => d.date.startsWith(selectedValue));
-      } else if (filterType === "year") {
-        filtered = allData.filter(d => d.date.startsWith(selectedValue));
-      }
+      if (filterType === "day") filtered = allData.filter(d => d.date.startsWith(selectedValue));
+      if (filterType === "month") filtered = allData.filter(d => d.date.startsWith(selectedValue));
+      if (filterType === "year") filtered = allData.filter(d => d.date.startsWith(selectedValue));
       const stats = calculateDetailedStats(filtered);
+      const summary = calculateStatusSummary(filtered);
       renderTable(stats);
-      const statusSummary = calculateStatusSummary(filtered);
-      renderStatusTable(statusSummary);
+      renderStatusTable(summary);
     }
 
     function renderTable(stats) {
       const container = document.getElementById('stats-container');
       container.innerHTML = '';
-      const diagonals = Array.from(new Set(
-        Object.values(stats).flatMap(p => Object.keys(p).map(Number))
-      )).sort((a, b) => b - a);
+      const diagonals = Array.from(new Set(Object.values(stats).flatMap(p => Object.keys(p).map(Number)))).sort((a, b) => b - a);
       let people = Object.keys(stats);
       if (people.length === 0) {
         container.innerHTML = '<p style="text-align:center; margin-top:20px;">Brak danych</p>';
@@ -343,11 +267,9 @@
       const thead = document.createElement('thead');
       const headerRow = document.createElement('tr');
       const thName = document.createElement('th'); thName.textContent = 'Name'; headerRow.appendChild(thName);
-      diagonals.forEach(d => {
-        const th = document.createElement('th'); th.textContent = d; headerRow.appendChild(th);
-      });
+      diagonals.forEach(d => { const th = document.createElement('th'); th.textContent = d; headerRow.appendChild(th); });
       const thDays = document.createElement('th'); thDays.textContent = 'Day'; headerRow.appendChild(thDays);
-      const thPercent = document.createElement('th'); thPercent.textContent = '%'; headerRow.appendChild(thPercent);
+      const thPercentPerMonth = document.createElement('th'); thPercentPerMonth.textContent = '%'; headerRow.appendChild(thPercentPerMonth);
       const thTotal = document.createElement('th'); thTotal.textContent = 'Total'; thTotal.className = 'total-col'; headerRow.appendChild(thTotal);
       thead.appendChild(headerRow); table.appendChild(thead);
       const tbody = document.createElement('tbody');
@@ -361,14 +283,12 @@
           tr.appendChild(td);
         });
         const daysSet = new Set();
-        diagonals.forEach(d => {
-          if (stats[person][d]) stats[person][d].days.forEach(day => daysSet.add(day));
-        });
+        diagonals.forEach(d => { if (stats[person][d]) stats[person][d].days.forEach(day => daysSet.add(day)); });
         const tdDays = document.createElement('td'); tdDays.textContent = daysSet.size; tr.appendChild(tdDays);
-        const tdPercent = document.createElement('td');
+        const tdPercentPerMonth = document.createElement('td');
         const totalForPerson = personTotals[person];
-        tdPercent.textContent = daysSet.size > 0 ? (totalForPerson / daysSet.size).toFixed(1) : '0';
-        tr.appendChild(tdPercent);
+        tdPercentPerMonth.textContent = daysSet.size > 0 ? (totalForPerson / daysSet.size).toFixed(1) : '0';
+        tr.appendChild(tdPercentPerMonth);
         const tdTotal = document.createElement('td'); tdTotal.textContent = totalForPerson; tdTotal.classList.add('total-col'); tr.appendChild(tdTotal);
         tbody.appendChild(tr);
       });
@@ -376,27 +296,73 @@
       const tfoot = document.createElement('tfoot');
       const footerRow = document.createElement('tr');
       const tdLabel = document.createElement('td'); tdLabel.textContent = 'Total Repaired'; footerRow.appendChild(tdLabel);
-      diagonals.forEach(d => {
-        const td = document.createElement('td'); td.textContent = totalPerDiagonal[d]; td.classList.add('total-col'); footerRow.appendChild(td);
-      });
-      footerRow.appendChild(document.createElement('td'));
-      footerRow.appendChild(document.createElement('td'));
+      diagonals.forEach(d => { const td = document.createElement('td'); td.textContent = totalPerDiagonal[d]; td.classList.add('total-col'); footerRow.appendChild(td); });
+      footerRow.appendChild(document.createElement('td')); footerRow.appendChild(document.createElement('td'));
       const tdGlobalTotal = document.createElement('td'); tdGlobalTotal.textContent = globalTotal; tdGlobalTotal.classList.add('total-col'); footerRow.appendChild(tdGlobalTotal);
       tfoot.appendChild(footerRow); table.appendChild(tfoot);
       container.appendChild(table);
+    }
+
+    function renderStatusTable(summary) {
+      const container = document.getElementById('status-container');
+      container.innerHTML = '';
+      if (Object.keys(summary).length === 0) {
+        container.innerHTML = '<p style="text-align:center; margin-top:20px;">Brak danych</p>';
+        return;
+      }
+      const table = document.createElement('table');
+      const thead = document.createElement('thead');
+      const headerRow = document.createElement('tr');
+      ['Name','Waiting','Scrap TTL','Scrap PNLA'].forEach(h => {
+        const th = document.createElement('th'); th.textContent = h; headerRow.appendChild(th);
+      });
+      thead.appendChild(headerRow); table.appendChild(thead);
+      const tbody = document.createElement('tbody');
+      Object.entries(summary).forEach(([person, vals]) => {
+        const tr = document.createElement('tr');
+        const tdName = document.createElement('td'); tdName.textContent = person; tr.appendChild(tdName);
+
+        const tdW = document.createElement('td'); tdW.textContent = vals.waiting; tdW.classList.add('status-waiting'); tr.appendChild(tdW);
+        const tdT = document.createElement('td'); tdT.textContent = vals["scrap ttl"]; tdT.classList.add('status-scrap-ttl'); tr.appendChild(tdT);
+        const tdP = document.createElement('td'); tdP.textContent = vals["scrap pnla"]; tdP.classList.add('status-scrap-pnla'); tr.appendChild(tdP);
+
+        tbody.appendChild(tr);
+      });
+      table.appendChild(tbody);
+      container.appendChild(table);
+    }
+
+    function fillDateSelect(filterType) {
+      const select = document.getElementById('date-select'); select.innerHTML = "";
+      const now = new Date();
+      if (filterType === "day") {
+        for (let i = 0; i < 30; i++) {
+          const d = new Date(now.getFullYear(), now.getMonth(), now.getDate() - i);
+          const val = d.toISOString().split("T")[0];
+          const opt = document.createElement("option"); opt.value = val; opt.textContent = val; select.appendChild(opt);
+        }
+      } else if (filterType === "month") {
+        for (let i = 0; i < 12; i++) {
+          const d = new Date(now.getFullYear(), now.getMonth() - i, 1);
+          const y = d.getFullYear(); const m = (d.getMonth() + 1).toString().padStart(2, "0");
+          const val = `${y}-${m}`;
+          const opt = document.createElement("option"); opt.value = val; opt.textContent = val; select.appendChild(opt);
+        }
+      } else if (filterType === "year") {
+        for (let i = 0; i < 5; i++) {
+          const y = now.getFullYear() - i;
+          const opt = document.createElement("option"); opt.value = y.toString(); opt.textContent = y.toString(); select.appendChild(opt);
+        }
+      }
+      return select.value;
     }
 
     (async () => {
       const filterTypeSelect = document.getElementById("filter-type");
       fillDateSelect(filterTypeSelect.value);
       await update();
-      filterTypeSelect.addEventListener("change", async () => {
-        fillDateSelect(filterTypeSelect.value);
-        await update();
-      });
-      document.getElementById("date-select").addEventListener("change", async () => {
-        await update();
-      });
+      filterTypeSelect.addEventListener("change", async () => { fillDateSelect(filterTypeSelect.value); await update(); });
+      document.getElementById("date-select").addEventListener("change", async () => { await update(); });
       setInterval(update, 300000);
     })();
   </script>
