--- a/index.html
+++ b/index.html
@@ -5,100 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LCDR LIVE DATA 2025</title>
   <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: Arial, sans-serif;
-    }
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 10%;
-      background-color: #111;
-      flex-wrap: wrap;
-    }
-    .header h1 {
-      margin: 0;
-      color: #005050;
-      font-size: 24px;
-    }
-    .controls {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 10px;
-      flex-wrap: wrap;
-    }
-    .date-info {
-      color: #005050;
-      font-size: 18px;
-    }
-    select {
-      padding: 6px 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: none;
-    }
-    #stats-container, #scrap-waiting-container {
-      width: 90%;
-      margin: 24px auto;
-      overflow-x: auto;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: #222;
-      color: #fff;
-    }
-    th, td {
-      border: 1px solid #555;
-      padding: 8px 10px;
-      text-align: center;
-      font-size: 14px;
-      white-space: nowrap;
-    }
-    th {
-      background-color: #005050;
-      font-weight: bold;
-      position: sticky;
-      top: 0;
-      z-index: 1;
-      cursor: pointer;
-    }
-    td:first-child {
-      background-color: #111;
-      font-weight: bold;
-      text-align: left;
-      position: sticky;
-      left: 0;
-      z-index: 1;
-    }
-    th.total-col, td.total-col {
-      background-color: #005050;
-      font-weight: bold;
-    }
-    tfoot td {
-      background-color: #005050;
-      font-weight: bold;
-    }
-    /* для scrap/waiting деления */
-    .cell-split {
-      display: flex;
-      justify-content: space-between;
-    }
-    .scrap {
-      color: #ff5555;
-    }
-    .waiting {
-      color: #55ff55;
-    }
-    details summary {
-      cursor: pointer;
-      font-size: 18px;
-      color: #005050;
-      margin-bottom: 10px;
-    }
+    body { background-color: #000; color: #fff; font-family: Arial, sans-serif; }
+    .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: #111; flex-wrap: wrap; }
+    .header h1 { margin: 0; color: #005050; font-size: 24px; }
+    .controls { display: flex; align-items: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
+    .date-info { color: #005050; font-size: 18px; }
+    select { padding: 6px 10px; font-size: 16px; border-radius: 5px; border: none; }
+    #stats-container, #scrap-waiting-container { width: 90%; margin: 24px auto; overflow-x: auto; }
+    table { width: 100%; border-collapse: collapse; background-color: #222; color: #fff; }
+    th, td { border: 1px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
+    th { background-color: #005050; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
+    td:first-child { background-color: #111; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
+    th.total-col, td.total-col { background-color: #005050; font-weight: bold; }
+    tfoot td { background-color: #005050; font-weight: bold; }
+    .cell-split { display: flex; justify-content: space-between; }
+    .scrap { color: #ff5555; }
+    .waiting { color: #55ff55; }
+    details summary { cursor: pointer; font-size: 18px; color: #005050; margin-bottom: 10px; }
   </style>
 </head>
 <body>
@@ -111,7 +34,6 @@
         <option value="month" selected>Miesiąc</option>
         <option value="year">Rok</option>
       </select>
-
       <label class="date-info">Wybierz:</label>
       <select id="date-select"></select>
     </div>
@@ -119,7 +41,7 @@
 
   <div id="stats-container"></div>
 
-  <!-- Новая свертываемая таблица Scrap/Waiting -->
+  <!-- Свертываемая таблица Scrap/Waiting -->
   <details id="scrap-waiting-table">
     <summary>Scrap / Waiting Stats</summary>
     <div id="scrap-waiting-container"></div>
@@ -131,140 +53,127 @@
     const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/`;
     const validStatuses = ['OK', 'NDF'];
 
-    const diagonalMapPrefix = {
-      'WH8': 55, 'WC8': 32, 'WU0': 43, 'SQ1': 43, 'WM5': 50, 'WC7': 32, 'WP5': 65, 'WW1': 75, 'WM6': 50
-    };
-
+    const diagonalMapPrefix = { 'WH8':55,'WC8':32,'WU0':43,'SQ1':43,'WM5':50,'WC7':32,'WP5':65,'WW1':75,'WM6':50 };
     const diagonalMap = {
-      '860': 86, '850': 85, '750': 75, '700': 70, '650': 65, '580': 58, '575': 58,
-      '550': 55, '545': 55, '500': 50, '498': 50, '495': 50, '490': 50,
-      '438': 43, '435': 43, '430': 43, '428': 43, '425': 43, '420': 43,
-      '418': 43, '415': 43, '398': 43, '395': 43, '390': 43,
-      '348': 32, '345': 32, '340': 32, '328': 32, '325': 32, '320': 32,
-      '318': 32, '315': 32,
-      '278': 27, '275': 27, '270': 27,
-      '248': 24, '245': 24, '240': 24, '238': 24, '235': 24, '230': 24
+      '860':86,'850':85,'750':75,'700':70,'650':65,'580':58,'575':58,
+      '550':55,'545':55,'500':50,'498':50,'495':50,'490':50,
+      '438':43,'435':43,'430':43,'428':43,'425':43,'420':43,
+      '418':43,'415':43,'398':43,'395':43,'390':43,
+      '348':32,'345':32,'340':32,'328':32,'325':32,'320':32,
+      '318':32,'315':32,'278':27,'275':27,'270':27,
+      '248':24,'245':24,'240':24,'238':24,'235':24,'230':24
     };
 
-    function getDiagonals(serial) {
-      if (!serial || serial.length < 6) return [];
+    function getDiagonals(serial){
+      if(!serial || serial.length<6) return [];
       const upper = serial.toUpperCase();
       const result = new Set();
       const match = upper.match(/^[A-Z]{3}(\d{3})/);
-      if (match && diagonalMap[match[1]]) result.add(diagonalMap[match[1]]);
-      const prefix = upper.slice(0, 3);
-      if (diagonalMapPrefix[prefix]) result.add(diagonalMapPrefix[prefix]);
+      if(match && diagonalMap[match[1]]) result.add(diagonalMap[match[1]]);
+      const prefix = upper.slice(0,3);
+      if(diagonalMapPrefix[prefix]) result.add(diagonalMapPrefix[prefix]);
       return [...result];
     }
 
-    async function getData(sheetName) {
-      try {
+    async function getData(sheetName){
+      try{
         const response = await fetch(`${sheetURL}${encodeURIComponent(sheetName)}?key=${apiKey}`);
         const data = await response.json();
         return data.values || [];
-      } catch (err) {
+      }catch(err){
         console.error('Ошибка получения данных:', err);
         return [];
       }
     }
 
-    async function fetchData() {
-      const sheetNames = ['FI Station KOVALCHYK Y.', 'FI Station 2 ULANOVYCH.R'];
+    async function fetchData(){
+      const sheetNames = ['FI Station KOVALCHYK Y.','FI Station 2 ULANOVYCH.R'];
       let combined = [];
-      for (const name of sheetNames) {
+      for(const name of sheetNames){
         const sheetData = await getData(name);
-        if (sheetData.length < 2) continue;
+        if(sheetData.length<2) continue;
         const rows = sheetData.slice(1);
-        const mapped = rows.map(row => ({
-          date: row[0] || '',
-          serial: row[2] || '',
-          status: (row[4] || '').toUpperCase(),
-          person: row[5] || ''
+        const mapped = rows.map(row=>({
+          date: row[0]||'',
+          serial: row[2]||'',
+          status: (row[4]||'').toUpperCase(),
+          person: row[5]||''
         }));
         combined = combined.concat(mapped);
       }
       return combined;
     }
 
-    function calculateDetailedStats(data) {
+    function calculateDetailedStats(data){
       const stats = {};
-      data.forEach(({ date, serial, status, person }) => {
-        if (!validStatuses.includes(status)) return;
+      data.forEach(({date, serial, status, person})=>{
+        if(!validStatuses.includes(status)) return;
         const diagonals = getDiagonals(serial);
-        if (diagonals.length === 0) return;
-        if (!stats[person]) stats[person] = {};
-        diagonals.forEach(diagonal => {
-          if (!stats[person][diagonal]) stats[person][diagonal] = { sum: 0, days: new Set() };
+        if(diagonals.length===0) return;
+        if(!stats[person]) stats[person]={};
+        diagonals.forEach(diagonal=>{
+          if(!stats[person][diagonal]) stats[person][diagonal]={ sum:0, days:new Set() };
           stats[person][diagonal].sum++;
           const day = date.split(' ')[0];
-          if (day) stats[person][diagonal].days.add(day);
+          if(day) stats[person][diagonal].days.add(day);
         });
       });
       return stats;
     }
 
-    function calculateScrapWaitingStats(data) {
+    function calculateScrapWaitingStats(data){
       const stats = {};
-      const scrapStatuses = ['SCRAP', 'TTL SCRAP', 'PNLA'];
-      const waitingStatuses = ['WAITING', 'TTL WAITING', 'PNLA'];
-
-      data.forEach(({ serial, status, person }) => {
-        if (!person || !serial || !status) return;
+      data.forEach(({serial, status, person})=>{
+        if(!person||!serial||!status) return;
         const upperStatus = status.toUpperCase();
-        if (![...scrapStatuses, ...waitingStatuses].includes(upperStatus)) return;
+        let type = null;
+        if(upperStatus.includes('SCRAP')) type='scrap';
+        else if(upperStatus.includes('WAITING')) type='waiting';
+        else return;
         const diagonals = getDiagonals(serial);
-        if (diagonals.length === 0) return;
-        if (!stats[person]) stats[person] = {};
-        diagonals.forEach(diagonal => {
-          if (!stats[person][diagonal]) stats[person][diagonal] = { scrap: 0, waiting: 0 };
-          if (scrapStatuses.includes(upperStatus)) stats[person][diagonal].scrap++;
-          if (waitingStatuses.includes(upperStatus)) stats[person][diagonal].waiting++;
+        if(diagonals.length===0) return;
+        if(!stats[person]) stats[person]={};
+        diagonals.forEach(diagonal=>{
+          if(!stats[person][diagonal]) stats[person][diagonal]={scrap:0, waiting:0};
+          stats[person][diagonal][type]++;
         });
       });
       return stats;
     }
 
-    function fillDateSelect(filterType) {
-      const select = document.getElementById('date-select');
-      select.innerHTML = "";
+    function fillDateSelect(filterType){
+      const select = document.getElementById('date-select'); select.innerHTML='';
       const now = new Date();
-      if (filterType === "day") {
-        for (let i = 0; i < 30; i++) {
-          const d = new Date(now.getFullYear(), now.getMonth(), now.getDate() - i);
-          const val = d.toISOString().split("T")[0];
-          const opt = document.createElement("option");
-          opt.value = val; opt.textContent = val;
-          select.appendChild(opt);
+      if(filterType==='day'){
+        for(let i=0;i<30;i++){
+          const d = new Date(now.getFullYear(), now.getMonth(), now.getDate()-i);
+          const val = d.toISOString().split('T')[0];
+          const opt = document.createElement('option'); opt.value=val; opt.textContent=val; select.appendChild(opt);
         }
-      } else if (filterType === "month") {
-        for (let i = 0; i < 12; i++) {
-          const d = new Date(now.getFullYear(), now.getMonth() - i, 1);
-          const y = d.getFullYear();
-          const m = (d.getMonth() + 1).toString().padStart(2, "0");
+      }else if(filterType==='month'){
+        for(let i=0;i<12;i++){
+          const d = new Date(now.getFullYear(), now.getMonth()-i,1);
+          const y=d.getFullYear(); const m=(d.getMonth()+1).toString().padStart(2,'0');
           const val = `${y}-${m}`;
-          const opt = document.createElement("option");
-          opt.value = val; opt.textContent = val;
-          select.appendChild(opt);
+          const opt=document.createElement('option'); opt.value=val; opt.textContent=val; select.appendChild(opt);
         }
-      } else if (filterType === "year") {
-        for (let i = 0; i < 5; i++) {
-          const y = now.getFullYear() - i;
-          const opt = document.createElement("option");
-          opt.value = y.toString(); opt.textContent = y.toString();
-          select.appendChild(opt);
+      }else if(filterType==='year'){
+        for(let i=0;i<5;i++){
+          const y=now.getFullYear()-i;
+          const opt=document.createElement('option'); opt.value=y.toString(); opt.textContent=y.toString(); select.appendChild(opt);
         }
       }
       return select.value;
     }
 
-    async function update() {
-      const filterType = document.getElementById("filter-type").value;
-      const selectedValue = document.getElementById("date-select").value;
+    async function update(){
+      const filterType = document.getElementById('filter-type').value;
+      const selectedValue = document.getElementById('date-select').value;
       const allData = await fetchData();
       let filtered = [];
-      if (filterType === "day") filtered = allData.filter(d => d.date.startsWith(selectedValue));
-      else if (filterType === "month") filtered = allData.filter(d => d.date.startsWith(selectedValue));
-      else if (filterType === "year") filtered = allData.filter(d => d.date.startsWith(selectedValue));
+      if(filterType==='day') filtered=allData.filter(d=>d.date.startsWith(selectedValue));
+      else if(filterType==='month') filtered=allData.filter(d=>d.date.startsWith(selectedValue));
+      else if(filterType==='year') filtered=allData.filter(d=>d.date.startsWith(selectedValue));
 
       const stats = calculateDetailedStats(filtered);
       renderTable(stats);
@@ -273,33 +182,30 @@
       renderScrapWaitingTable(scrapWaitingStats);
     }
 
-    function renderTable(stats) {
-      const container = document.getElementById('stats-container');
-      container.innerHTML = '';
-      const diagonals = Array.from(new Set(
-        Object.values(stats).flatMap(p => Object.keys(p).map(Number))
-      )).sort((a, b) => b - a);
-      let people = Object.keys(stats);
-      if (people.length === 0) { container.innerHTML = '<p style="text-align:center; margin-top:20px;">Brak danych</p>'; return; }
-      const totalPerDiagonal = {}; diagonals.forEach(d => totalPerDiagonal[d] = 0);
-      const personTotals = {};
-      people.forEach(person => {
-        let total = 0;
-        diagonals.forEach(d => { if (stats[person][d]) { total += stats[person][d].sum; totalPerDiagonal[d] += stats[person][d].sum; } });
-        personTotals[person] = total;
+    function renderTable(stats){
+      const container=document.getElementById('stats-container'); container.innerHTML='';
+      const diagonals=Array.from(new Set(Object.values(stats).flatMap(p=>Object.keys(p).map(Number)))).sort((a,b)=>b-a);
+      let people=Object.keys(stats);
+      if(people.length===0){ container.innerHTML='<p style="text-align:center; margin-top:20px;">Brak danych</p>'; return; }
+      const totalPerDiagonal={}; diagonals.forEach(d=>totalPerDiagonal[d]=0);
+      const personTotals={};
+      people.forEach(person=>{
+        let total=0;
+        diagonals.forEach(d=>{ if(stats[person][d]){ total+=stats[person][d].sum; totalPerDiagonal[d]+=stats[person][d].sum; }});
+        personTotals[person]=total;
       });
-      people = people.sort((a, b) => (personTotals[b] || 0) - (personTotals[a] || 0));
-      const table = document.createElement('table');
-      const thead = document.createElement('thead'); const headerRow = document.createElement('tr');
-      const thName = document.createElement('th'); thName.textContent = 'Name'; headerRow.appendChild(thName);
-      diagonals.forEach(d => { const th = document.createElement('th'); th.textContent = d; headerRow.appendChild(th); });
-      ['Day','%','Total'].forEach(text => { const th = document.createElement('th'); th.textContent = text; if(text==='Total') th.className='total-col'; headerRow.appendChild(th); });
+      people=people.sort((a,b)=>(personTotals[b]||0)-(personTotals[a]||0));
+      const table=document.createElement('table');
+      const thead=document.createElement('thead'); const headerRow=document.createElement('tr');
+      const thName=document.createElement('th'); thName.textContent='Name'; headerRow.appendChild(thName);
+      diagonals.forEach(d=>{ const th=document.createElement('th'); th.textContent=d; headerRow.appendChild(th); });
+      ['Day','%','Total'].forEach(text=>{ const th=document.createElement('th'); th.textContent=text; if(text==='Total') th.className='total-col'; headerRow.appendChild(th); });
       thead.appendChild(headerRow); table.appendChild(thead);
-      const tbody = document.createElement('tbody');
-      const globalTotal = Object.values(personTotals).reduce((a,b)=>a+b,0);
-      people.forEach(person => {
-        const tr = document.createElement('tr');
-        const tdName = document.createElement('td'); tdName.textContent=person; tr.appendChild(tdName);
+      const tbody=document.createElement('tbody');
+      const globalTotal=Object.values(personTotals).reduce((a,b)=>a+b,0);
+      people.forEach(person=>{
+        const tr=document.createElement('tr');
+        const tdName=document.createElement('td'); tdName.textContent=person; tr.appendChild(tdName);
         diagonals.forEach(d=>{ const td=document.createElement('td'); td.textContent=stats[person][d]?stats[person][d].sum:'-'; tr.appendChild(td); });
         const daysSet=new Set(); diagonals.forEach(d=>{ if(stats[person][d]) stats[person][d].days.forEach(day=>daysSet.add(day)); });
         const tdDays=document.createElement('td'); tdDays.textContent=daysSet.size; tr.appendChild(tdDays);
@@ -317,11 +223,10 @@
       container.appendChild(table);
     }
 
-    function renderScrapWaitingTable(stats) {
-      const container = document.getElementById('scrap-waiting-container');
-      container.innerHTML='';
-      const diagonals = Array.from(new Set(Object.values(stats).flatMap(p=>Object.keys(p).map(Number)))).sort((a,b)=>b-a);
-      const people = Object.keys(stats);
+    function renderScrapWaitingTable(stats){
+      const container=document.getElementById('scrap-waiting-container'); container.innerHTML='';
+      const diagonals=Array.from(new Set(Object.values(stats).flatMap(p=>Object.keys(p).map(Number)))).sort((a,b)=>b-a);
+      const people=Object.keys(stats);
       if(people.length===0){ container.innerHTML='<p style="text-align:center; margin-top:20px;">Brak danych</p>'; return; }
       const table=document.createElement('table');
       const thead=document.createElement('thead'); const headerRow=document.createElement('tr');
@@ -336,7 +241,7 @@
           const td=document.createElement('td');
           if(stats[person][d]){
             td.innerHTML=`<div class="cell-split"><span class="scrap">${stats[person][d].scrap}</span><span class="waiting">${stats[person][d].waiting}</span></div>`;
-          } else td.textContent='-';
+          }else td.textContent='-';
           tr.appendChild(td);
         });
         tbody.appendChild(tr);
@@ -348,12 +253,9 @@
       const filterTypeSelect=document.getElementById("filter-type");
       fillDateSelect(filterTypeSelect.value);
       await update();
-      filterTypeSelect.addEventListener("change",async()=>{
-        fillDateSelect(filterTypeSelect.value);
-        await update();
-      });
-      document.getElementById("date-select").addEventListener("change",async()=>{ await update(); });
-      setInterval(update,300000);
+      filterTypeSelect.addEventListener("change", async()=>{ fillDateSelect(filterTypeSelect.value); await update(); });
+      document.getElementById("date-select").addEventListener("change", async()=>{ await update(); });
+      setInterval(update, 300000);
     })();
   </script>
 </body>
