--- a/index.html
+++ b/index.html
@@ -224,29 +224,41 @@
     }
 
     function renderScrapWaitingTable(stats){
-      const container=document.getElementById('scrap-waiting-container'); container.innerHTML='';
-      const diagonals=Array.from(new Set(Object.values(stats).flatMap(p=>Object.keys(p).map(Number)))).sort((a,b)=>b-a);
-      const people=Object.keys(stats);
-      if(people.length===0){ container.innerHTML='<p style="text-align:center; margin-top:20px;">Brak danych</p>'; return; }
-      const table=document.createElement('table');
-      const thead=document.createElement('thead'); const headerRow=document.createElement('tr');
-      const thName=document.createElement('th'); thName.textContent='Name'; headerRow.appendChild(thName);
-      diagonals.forEach(d=>{ const th=document.createElement('th'); th.textContent=d; headerRow.appendChild(th); });
-      table.appendChild(thead); thead.appendChild(headerRow);
-      const tbody=document.createElement('tbody');
-      people.forEach(person=>{
-        const tr=document.createElement('tr');
-        const tdName=document.createElement('td'); tdName.textContent=person; tr.appendChild(tdName);
+      const container = document.getElementById('scrap-waiting-container');
+      container.innerHTML = '';
+      const diagonals = Array.from(new Set(Object.values(stats).flatMap(p => Object.keys(p).map(Number)))).sort((a,b)=>b-a);
+      const people = Object.keys(stats);
+      if(people.length === 0){ container.innerHTML = '<p style="text-align:center; margin-top:20px;">Brak danych</p>'; return; }
+
+      const table = document.createElement('table');
+      const thead = document.createElement('thead');
+      const headerRow = document.createElement('tr');
+      const thName = document.createElement('th'); thName.textContent = 'Name'; headerRow.appendChild(thName);
+      diagonals.forEach(d => { const th = document.createElement('th'); th.textContent = d; headerRow.appendChild(th); });
+      const thScrapTotal = document.createElement('th'); thScrapTotal.textContent = 'Scrap Total'; thScrapTotal.className='total-col'; headerRow.appendChild(thScrapTotal);
+      const thWaitingTotal = document.createElement('th'); thWaitingTotal.textContent = 'Waiting Total'; thWaitingTotal.className='total-col'; headerRow.appendChild(thWaitingTotal);
+      thead.appendChild(headerRow); table.appendChild(thead);
+
+      const tbody = document.createElement('tbody');
+      people.forEach(person => {
+        const tr = document.createElement('tr');
+        const tdName = document.createElement('td'); tdName.textContent = person; tr.appendChild(tdName);
+        let scrapSum = 0; let waitingSum = 0;
         diagonals.forEach(d=>{
-          const td=document.createElement('td');
+          const td = document.createElement('td');
           if(stats[person][d]){
-            td.innerHTML=`<div class="cell-split"><span class="scrap">${stats[person][d].scrap}</span><span class="waiting">${stats[person][d].waiting}</span></div>`;
-          }else td.textContent='-';
+            td.innerHTML = `<div class="cell-split"><span class="scrap">${stats[person][d].scrap}</span><span class="waiting">${stats[person][d].waiting}</span></div>`;
+            scrapSum += stats[person][d].scrap;
+            waitingSum += stats[person][d].waiting;
+          } else td.textContent = '-';
           tr.appendChild(td);
         });
+        const tdScrapTotal = document.createElement('td'); tdScrapTotal.textContent = scrapSum; tdScrapTotal.className='total-col'; tr.appendChild(tdScrapTotal);
+        const tdWaitingTotal = document.createElement('td'); tdWaitingTotal.textContent = waitingSum; tdWaitingTotal.className='total-col'; tr.appendChild(tdWaitingTotal);
         tbody.appendChild(tr);
       });
-      table.appendChild(tbody); container.appendChild(table);
+      table.appendChild(tbody);
+      container.appendChild(table);
     }
 
     (async()=>{
